--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="quote_me_header">Quote Me</string>
+    <string name="menu_github">Github</string>
+    <string name="menu_linkedin">Linkedin</string>
 
 </resources>
