--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,15 @@
     <string name="quote_me_header">Quote Me</string>
     <string name="menu_github">Github</string>
     <string name="menu_linkedin">Linkedin</string>
+    <string name="email_icon_desc">Icon to indicate intent to share a quote with friends</string>
+    <string name="motivation_string_literal">Motivational</string>
+    <string name="what_would_kanye_say">What would Kanye say:</string>
+    <string name="kanye">Kanye</string>
+    <string name="demotivational_string_literal">Demotivational</string>
+    <string name="github_link">https://github.com/garganjohn</string>
+    <string name="linkedin_link">https://www.linkedin.com/in/john-gargan-97532a59/</string>
+    <string name="motivational_quotes">Motivational Quotes</string>
+    <string name="demotivational_quotes">Demotivational Quotes</string>
+    <string name="kanye_quotes">Kanye Quotes</string>
 
 </resources>
