--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">QuoteMe</string>
+    <string name="app_name">Quotable</string>
 
     <string-array name="view_pager_choices">
         <item>Motivational Quote</item>
@@ -7,7 +7,6 @@
         <item>Kanye Quote</item>
     </string-array>
 
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="quote_me_header">Quote Me</string>
     <string name="menu_github">Github</string>
