changed kanyes quotes to just kanye

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,6 @@
     <string name="linkedin_link">https://www.linkedin.com/in/john-gargan-97532a59/</string>
     <string name="motivational_quotes">Motivational Quotes</string>
     <string name="demotivational_quotes">Demotivational Quotes</string>
-    <string name="kanye_quotes">Kanye Quotes</string>
+    <string name="kanye_quotes">Kanye</string>
 
 </resources>
